# Proyecto_ajedrez

./: Alfiles.cpp  Alfiles.h  CMakeLists.txt  Caballos.cpp  Caballos.h  Peones.cpp  Peones.h  Piezas.h  Reinas.cpp  Reinas.h  Reyes.cpp  Reyes.h  Tablero.cpp  Tablero.h  Torres.cpp  Torres.h  main.cpp  tempCodeRunnerFile.cpp
